<resources>
    <string name="app_name" translatable="false">PuzzleDroid</string>
    <string name="nav_header_title" translatable="false">PuzzleDroid</string>
    <string name="nav_header_subtitle" translatable="false">Rubik Soft</string>
    <string name="nav_header_sign_in">Sign In</string>
    <string name="nav_header_sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">PuzzleDroid</string>
    <string name="menu_start_game">Start Game</string>
    <string name="menu_scores">High Scores</string>
    <string name="menu_global_scores">Worldwide High Scores</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>

    <string name="mode_preloaded_img">NPuzzle Classic</string>
    <string name="mode_random_gallery_img">NPuzzle from Gallery</string>
    <string name="mode_cam_picture_img">NPuzzle taking a picture</string>
    <string name="mode_firebase_img">NPuzzle with online pictures</string>

    <string name="button_next_lvl">Continue</string>
    <string name="button_back_menu">Exit</string>

    <string name="settings_user">User Name</string>
    <string name="settings_audio_options">Sound Options</string>
    <string name="settings_audio_background">Background Music</string>
    <string name="settings_audio_custom_theme">Custom Audio Theme</string>
    <string name="settings_audio_effects">Audio Effects</string>
    <string name="settings_level">Set Level</string>

    <string name="permission_denied_title">Permission Denied</string>
    <string name="permission_denied_description">Permission is denied, Please allow permissions from App Settings.</string>
</resources>
