<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_app_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scores"
            android:icon="@drawable/ic_sharp_view_list_24"
            android:title="@string/menu_scores" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_18dp"
            android:title="@string/menu_help" />
    </group>
</menu>
