<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_user"
            android:fontFamily="@font/baby_monsta"/>
        <EditText
            android:id="@+id/settings_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:hint="@string/settings_user"
            android:autofillHints=""
            android:maxLength="15"
            android:fontFamily="@font/baby_monsta"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_audio_options"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baby_monsta"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_button_audio_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_audio_background"
            android:layoutDirection="rtl"
            app:switchPadding="8dp"
            android:fontFamily="@font/baby_monsta"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_button_audio_effects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_audio_effects"
            android:layoutDirection="rtl"
            app:switchPadding="8dp"
            android:fontFamily="@font/baby_monsta"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_custom_audio_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:soundEffectsEnabled="true"
            android:text="@string/settings_audio_custom_theme"
            android:fontFamily="@font/baby_monsta"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_level"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baby_monsta"/>
        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            app:np_height="50dp"
            app:np_dividerColor="@color/colorPrimary"
            app:np_max="10"
            app:np_min="0"
            app:np_selectedTextColor="@color/colorPrimary"
            app:np_textColor="@color/colorPrimary"
            app:np_value="1"
            app:np_wheelItemCount="5"
            app:np_typeface="@font/baby_monsta"
            app:np_orientation="horizontal"/>
        <TextView
            android:id="@+id/settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView >