<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.awaredevelopers.puzzledroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_ScoresFragment"
            app:destination="@id/nav_scores" />
        <action
            android:id="@+id/action_HomeFragment_to_GlobalScoresFragment"
            app:destination="@id/nav_global_scores" />
        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_HomeFragment_to_HelpFragment"
            app:destination="@id/nav_help" />
        <action
            android:id="@+id/action_HomeFragment_to_GameModesFragment"
            app:destination="@id/nav_gamesmodes" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/nav_home_help"-->
<!--        android:name="com.awaredevelopers.puzzledroid.ui.help.HelpFragment"-->
<!--        android:label="@string/menu_help"-->
<!--        tools:layout="@layout/fragment_help">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_scores"
        android:name="com.awaredevelopers.puzzledroid.ui.scores.ScoresFragment"
        android:label="@string/menu_scores"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_global_scores"
        android:name="com.awaredevelopers.puzzledroid.ui.globalScores.GlobalScoresFragment"
        android:label="@string/menu_scores"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.awaredevelopers.puzzledroid.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_gamesmodes"
        android:name="com.awaredevelopers.puzzledroid.ui.gameModes.GameModesFragment"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.awaredevelopers.puzzledroid.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

</navigation>