<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:hapticFeedbackEnabled="true"
    tools:context=".ui.home.HomeFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:hapticFeedbackEnabled="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:gravity="center"
                android:src="@mipmap/name" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="60dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:hapticFeedbackEnabled="true"
                android:id="@+id/textViewMode1"
                android:layout_width="match_parent"
                android:soundEffectsEnabled="true"
                android:text="@string/mode_preloaded_img"
                android:fontFamily="@font/baby_monsta"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:hapticFeedbackEnabled="true"
                android:id="@+id/textViewMode2"
                android:layout_width="match_parent"
                android:soundEffectsEnabled="true"
                android:text="@string/mode_random_gallery_img"
                android:fontFamily="@font/baby_monsta"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:hapticFeedbackEnabled="true"
                android:id="@+id/textViewMode3"
                android:layout_width="match_parent"
                android:soundEffectsEnabled="true"
                android:text="@string/mode_cam_picture_img"
                android:fontFamily="@font/baby_monsta"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:textSize="20sp" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:hapticFeedbackEnabled="true"
                android:id="@+id/textViewMode4"
                android:layout_width="match_parent"
                android:soundEffectsEnabled="true"
                android:text="@string/mode_firebase_img"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/baby_monsta"
                android:textAlignment="center"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>